Fixa hcard and add Google Analytics

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div id="andreaswalm">
 			<div id="header"> 
 				<p id="vcard"><a href="http://h2vx.com/vcf/http://andreas.walm.net/" rel="enclosure" title="Download vCard"><span>/vCard</span></a></p> 
-				<h1 class="fn n"><span class="given-name">Andreas</span><span class="family-name">W&aring;lm</span></h1> 
+				<h1 class="fn n">Andreas<span>W&aring;lm</span></h1> 
 				<p id="jobtitle">webdeveloper</p>
 			</div>
 			<div id="about">
@@ -29,7 +29,7 @@
 							<img src="img/profiles/email.png" width="32" height="32" alt="Mail" title="Mail me, but no spam!"/> 
 							<span>
 								<strong>Mail</strong> 
-								<span class="email">andreas@walm.net</span>
+								<span>andreas@walm.net</span>
 							</span>
 						</a> 
 					</li>
@@ -111,16 +111,39 @@
 			</div>			
 			<div class="line"><!-- a line to seperate content --></div>			
 			<div id="contact">
-				<p class="org">WalmNET</p>
-				<p class="adr street-address">Fritz Janssons V&auml;g 4</p>
-				<p class="adr"><span class="postal-code">184 70</span> <span class="locality">&Aring;kersberga</span></p>
-				<p class="adr country-name">Sweden</p>
-				<p class="tel"><a href="callto:+46735001664"><span>+46 735 00 16 64</span></a></p>
-				<p class="url"><a href="http://walm.net"><span>http://walm.net</a></span></p>
+				
+				<div id="hcard-Andreas-Wålm" class="vcard">
+					<p><a class="url fn" href="http://andreas.walm.net">Andreas Wålm</a></p>
+					<div class="org">WalmNET</div>
+					<p><a class="email" href="mailto:andreas@walm.net">andreas@walm.net</a></p>
+					<div class="adr">
+						<div class="street-address">Fritz Janssons Väg 4</div>
+						<p><span class="postal-code">184 70</span> <span class="locality">Åkersberga</span></p>						
+						<p><span class="country-name">Sweden</span></p>
+					</div>
+					<div class="tel"><a href="callto:+46735001664">+46 735 00 16 64</a></div>
+				</div>
+				<p><a href="http://walm.net" class="url org">http://walm.net</a></p>
+				
 			</div>
 		</div>
 		<div id="footer">
 			<p>&copy; Andreas Wålm 1979-&lsquo;10, icons from <a href="http://www.komodomedia.com" taget="_blank">www.komodomedia.com</a></p>
-		</div> 
+		</div>
+		<a href="http://github.com/walm"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
+		
+		<!--
+		<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
+		try{
+		var pageTracker = _gat._getTracker("UA-xxxxxx-x");
+		pageTracker._trackPageview();
+		} catch(err) {}
+		</script>
+		-->
+		
 	</body> 
 </html>
