add link to Tim Van Damme and change webdeveloper to web developer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div id="header"> 
 				<p id="vcard"><a href="http://h2vx.com/vcf/http://andreas.walm.net/" rel="enclosure" title="Download vCard"><span>/vCard</span></a></p> 
 				<h1 class="fn n">Andreas<span>W&aring;lm</span></h1> 
-				<p id="jobtitle">webdeveloper</p>
+				<p id="jobtitle">web developer</p>
 			</div>
 			<div id="about">
 				<!-- need to write something about me.. -->
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 		<div id="footer">
-			<p>&copy; Andreas Wålm 1979-&lsquo;10, icons from <a href="http://www.komodomedia.com" taget="_blank">www.komodomedia.com</a></p>
+			<p>&copy; Andreas Wålm 1979-&lsquo;10, inspired by <a href="http://timvandamme.com/" target="_blank">Tim Van Damme</a> and icons from <a href="http://www.komodomedia.com" taget="_blank">www.komodomedia.com</a></p>
 		</div>
 		<a href="http://github.com/walm"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a> 
 		
